--- a/index.html
+++ b/index.html
@@ -11,6 +11,68 @@
 </head>
 
 <body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Portfolio
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                            <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
+                            <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
+                            <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                            <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+                            <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Blog
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                            <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
+                            <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
+                            <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Other Pages
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                            <a class="dropdown-item" href="full-width.html">Full Width Page</a>
+                            <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
+                            <a class="dropdown-item" href="faq.html">FAQ</a>
+                            <a class="dropdown-item active" href="404.html">404</a>
+                            <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
     <div class="container">
         <h1 class="text-center"> Lorem Ipsum</h1>
         <h1 class="text-center small">"Neque porro quisquam est qui dolorem ipsum quia dolor sit
@@ -22,7 +84,8 @@
         <div class="row">
             <div class="col-md-6 col-sm-3">
                 <h2 class="font-weight-bold">Why do we use it?</h2>
-                <p class="text-justify term">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                <p class="text-justify term">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                     when an unknown printer took a galley of type and scrambled it to make a
                     type specimen book. It has survived not only five centuries, but also
@@ -55,9 +118,11 @@
                     professor at Hampden-Sydney College in Virginia,
                     looked up one of the more obscure Latin words,
                     consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical
-                    literature,discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of
+                    literature,discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and
+                    1.10.33 of
                     "de
-                    FinibuBonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is
+                    FinibuBonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book
+                    is
                     a
                     treatise
                     on
@@ -68,7 +133,8 @@
             </div>
             <div class="col-md-6 col-sm-3">
                 <h2 class="font-weight-bold ">Why do we use it?</h2>
-                <p class="text-justify term4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                <p class="text-justify term4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                     when an unknown printer took a galley of type and scrambled it to make a
                     type specimen book. It has survived not only five centuries, but also
@@ -90,71 +156,108 @@
         <p class="text-center"><b>Donate:</b> If you use this site regularly and would like to help
             keep the site
             on the Internet, please consider
-            donating a small sum to help pay for the hosting and bandwidth bill. There is no minimum donation, any sum
+            donating a small sum to help pay for the hosting and bandwidth bill. There is no minimum donation, any
+            sum
             is appreciated - click <b class="text-danger">here</b> to donate using PayPal. Thank you for
             your support.
         </p>
         <h6><b>The standard Lorem Ipsum passage, used since the 1500s</b></h6>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit
             anim id est laborum."</p>
         <h6><b>Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</b></h6>
-        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+            rem
+            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+            explicabo.
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-            dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-            sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+            dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+            dolor
+            sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
+            dolore
             magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
-            suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
+            suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
+            qui in
             ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas
             nulla pariatur?"</p>
         <h6><b>1914 translation by H. Rackham</b></h6>
-        <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I
-            will give you a complete account of the system, and expound the actual teachings of the great explorer of
+        <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+            and I
+            will give you a complete account of the system, and expound the actual teachings of the great explorer
+            of
             the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself,
             because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter
-            consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain
-            pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can
-            procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical
+            consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to
+            obtain
+            pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain
+            can
+            procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious
+            physical
             exercise, except to obtain some advantage from it? But who has any right to find fault with a man who
             chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no
             resultant pleasure?"</p>
 
         <h6> <b>Section 1.10.33 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</b></h6>
-        <p> "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-            atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
+        <p> "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+            deleniti
+            atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
+            similique
             sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
             facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
             impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor
-            repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
-            voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus,
-            ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."<\p>
+            repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+            ut et
+            voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente
+            delectus,
+            ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+            <\p>
 
                 <h6><b> 1914 translation by H. Rackham</b></h6>
-                <p>"On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
-                    demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
+                <p>"On the other hand, we denounce with righteous indignation and dislike men who are so beguiled
+                    and
+                    demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot
+                    foresee
                     the
                     pain
-                    and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through
-                    weakness of will, which is the same as saying through shrinking from toil and pain. These cases are
-                    perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled
+                    and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty
+                    through
+                    weakness of will, which is the same as saying through shrinking from toil and pain. These cases
+                    are
+                    perfectly simple and easy to distinguish. In a free hour, when our power of choice is
+                    untrammelled
                     and
                     when
-                    nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every
+                    nothing prevents our being able to do what we like best, every pleasure is to be welcomed and
+                    every
                     pain
-                    avoided. But in certain circumstances and owing to the claims of duty or the obligations of business
+                    avoided. But in certain circumstances and owing to the claims of duty or the obligations of
+                    business
                     it
                     will
                     frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man
                     therefore
                     always
-                    holds in these matters to this principle of selection: he rejects pleasures to secure other greater
+                    holds in these matters to this principle of selection: he rejects pleasures to secure other
+                    greater
                     pleasures, or else he endures pains to avoid worse pains."</p>
         </p>
-
     </div>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
