--- a/about.html
+++ b/about.html
@@ -2,40 +2,173 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>All About Solan</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link href="./css/newstyle.css" rel="stylesheet">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Modern Business</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="name">
-            Solan
-        </h1>
-        <div class="row">
-            <p class="text-center text-justify">
-                Solan is the district headquarters of Solan district (created on 1 September 1972) in the Indian state
-                of Himachal Pradesh. The largest Municipal Council of Himachal Pradesh, it is located 46 kilometres (29
-                mi) south of the state capital, Shimla. At an average elevation of 1,600 metres (5,200 ft).[1] The place
-                is named after the Hindu goddess Shoolini Devi. Every year in the month of June, a fair venerating the
-                goddess is held, featuring a 3-day mela at the central Thodo grounds. Solan was the capital of the
-                erstwhile princely state, Baghat.[2]
 
-                It is known as the "Mushroom city of India" because of the vast mushroom farming in the area as well as
-                the Directorate of Mushroom Research (DMR) situated at Chambaghat.
-
-                Solan is crowned as the "City of Red Gold", in reference to the bulk production of tomatoes in the
-                area.[1] The town is situated between Chandigarh (joint capital of Punjab and Harayana) and Shimla
-                (state capital), on the Kalka-Shimla National Highway-22. The Kalka-Shimla railway a Narrow-gauge
-                railway line passes through Solan. It was built by the British and is a recognised UNESCO World Heritage
-                site
-            </p>
-            <img src="images/Solan_collage.jpg" alt="Solan" width="1000" height="800" class="mx-auto d-block">
+    <!-- Navigation -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Modern Business</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faq.html">Faqs</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Page Heading/Breadcrumbs -->
+        <h1 class="mt-4 mb-3">About
+            <small>Subheading</small>
+        </h1>
+
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="index.html">Home</a>
+            </li>
+            <li class="breadcrumb-item active">About</li>
+        </ol>
+
+        <!-- Intro Content -->
+        <div class="row">
+            <div class="col-lg-6">
+                <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
+            </div>
+            <div class="col-lg-6">
+                <h2>About Modern Business</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur
+                    similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem
+                    perferendis dicta dolorem non blanditiis ex fugiat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum
+                    voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus
+                    reprehenderit dolorum!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis
+                    ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti
+                    necessitatibus perspiciatis quis?</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Team Members -->
+        <h2>Our Team</h2>
+
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+                <div class="card h-100 text-center">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Team Member</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut
+                            mollitia eum ipsum fugiat odio officiis odit.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#">name@example.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="card h-100 text-center">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Team Member</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut
+                            mollitia eum ipsum fugiat odio officiis odit.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#">name@example.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="card h-100 text-center">
+                    <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Team Member</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut
+                            mollitia eum ipsum fugiat odio officiis odit.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#">name@example.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Our Customers -->
+        <h2>Our Customers</h2>
+        <div class="row">
+            <div class="col-lg-2 col-sm-4 mb-4">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </div>
+            <div class="col-lg-2 col-sm-4 mb-4">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </div>
+            <div class="col-lg-2 col-sm-4 mb-4">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </div>
+            <div class="col-lg-2 col-sm-4 mb-4">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </div>
+            <div class="col-lg-2 col-sm-4 mb-4">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </div>
+            <div class="col-lg-2 col-sm-4 mb-4">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </div>
+        </div>
+        <!-- /.row -->
+
     </div>
+    <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark" id="footer">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; 2019</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
